finished website tutorial

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <div class="text-container">
             <p>
-              !Bachelor of Computer Applications Student.
+              Bachelor of Computer Applications Student.
               Iconsider my self a responsible and orderly person.
               I am looking forward for upskill my technical knowledge and growth with organization.
             </p>
