--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -30,7 +29,6 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -82,13 +80,6 @@
         </div>
         <div class="about-details-container">
           <div class="about-containers">
-            <div class="details-container">
-              <img
-                src="./assets/experience.png"
-                alt="Experience icon"
-                class="icon"
-              />
-              <h3>fresher</h3>
             </div>
             <div class="details-container">
               <img
@@ -118,7 +109,6 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Fresher</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -168,7 +158,7 @@
                   class="icon"
                   />
                 <div>
-                  <h3>running</h3>
+                  <h3>Athlete</h3>
                 </div>
               </article>
               <article>
@@ -178,7 +168,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Fitnessc</h3>
+                  <h3>Fitness</h3>
                 </div>
               </article>
             </div>
