--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#skill" onclick="toggleMenu()">Skill</a></li>
+          <li><a href="#skill" onclick="toggleMenu()">skill</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -84,7 +84,7 @@
             <div class="details-container">
               <img
                 src="./assets/education.png"
-                alt="Education icon"
+                alt="Skillicon"
                 class="icon"
               />
               <h3>Education</h3>
@@ -104,20 +104,20 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#experience'"
+        onclick="location.href='./#skill'"
       />
     </section>
-    <section id="experience">
+    <section id="skill">
       <p class="section__text__p1">Explore My</p>
-      <div class="experience-details-container">
-        <div class="about-containers">
+      <div class="skill-details-container">
+        <div class="skill-containers">
           <div class="details-container">
-            <h2 class="Skill-sub-title"> skill</h2>
+            <h2 class="skill-sub-title">skill</h2>
             <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skill icon"
                   class="icon"
                   />
                 <div>
@@ -127,7 +127,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skill icon"
                   class="icon"
                 />
                 <div>
@@ -137,7 +137,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="skill icon"
                   class="icon"
                 />
                 <div>
@@ -149,12 +149,12 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Extra curricular activity</h2>
+            <h2 class="skill-sub-title">Extra curricular activity</h2>
             <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skill icon"
                   class="icon"
                   />
                 <div>
@@ -164,7 +164,7 @@
               <article>
                 <img
                   src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  alt="Skill icon"
                   class="icon"
                 />
                 <div>
@@ -222,7 +222,7 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#experience">fresher</a></li>
+            <li><a heef="#skill">Skill</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
