--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/dk resume-example.pdf')"
           >
-            Download CV
+            Download Resume
           </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
@@ -108,11 +108,10 @@
       />
     </section>
     <section id="skill">
-      <p class="section__text__p1">Explore My</p>
+      <p class="section__text__p1">Explore My Skils</p>
       <div class="skill-details-container">
         <div class="skill-containers">
           <div class="details-container">
-            <h2 class="skill-sub-title">skill</h2>
             <div class="article-container">
               <article>
                 <img
@@ -213,7 +212,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com">https:</a></p>
         </div>
       </div>
     </section>
@@ -222,7 +221,6 @@
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a heef="#skill">Skill</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
